@@ -1,3 +1,8 @@
+2010-06-02  Kirit Saelensminde  <kirit@felspar.com>
+ Fost authentication
+ - Fixed the signature so that it signs the query string when there is
+   no post data.
+
 2010-05-31  Kirit Saelensminde  <kirit@felspar.com>
  Fost authentication
  - Added a utility function to add the authentication to a user agent.
